--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ install:
 before_script:
    - export DISPLAY=:99.0
    - sh -e /etc/init.d/xvfb start
+   - psql -c 'create database birdup_test;' -U postgres
 
 script:
   - bundle exec rake db:schema:load
