--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,31 @@ node_modules
 
 # Generated js bundles
 /public/webpack/*
+
+
+
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log/*.log
+/tmp
+/public/assets
+.env
+node_modules
+npm-debug.log*
+/coverage
+
+# Ignore bundle dependencies
+vendor/ruby
+
+# Generated js bundles
+/public/webpack/
+
+# Rubymine/IntelliJ
+.idea
+
