ok this is it. webpack shouldrun on travis!!!

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "postinstall": "cd client && yarn install",
-    "build:test": "(cd client && yarn run build:test)"
+    "build:test": "cd client && yarn run build:test"
   },
   "cacheDirectories": [
     "node_modules", "client/node_modules"
