setting up more parts of the db

--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "postinstall": "cd client && yarn install"
   },
   "cacheDirectories": [
-    "node_modules", "client/node_modules"
+    "node_modules",
+    "client/node_modules"
   ],
   "name": "birdup",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
+  }
 }
