--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "birdup",
+  "name": "react-on-rails-hot-minimal",
   "private": true,
-  "scripts": {
-    "build:test": "NODE_ENV=test webpack --config webpack.config.js",
-    "build:production": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:development": "NODE_ENV=development webpack -w --config webpack.config.js"
+  "engines": {
+    "node": "6.9.0",
+    "npm": "4.1.1"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"],
+  "scripts": {
+    "build:development": "webpack-dev-server --config webpack.config --progress"
+  },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.3.2",
-    "babel-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-runtime": "^6.20.0",
+    "css-loader": "^0.26.1",
     "es5-shim": "^4.5.9",
-    "expose-loader": "^0.7.3",
     "imports-loader": "^0.7.1",
-    "js-yaml": "^3.8.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-on-rails": "8.0.3",
-    "webpack": "^2.3.3",
-    "webpack-manifest-plugin": "^1.1.0"
+    "loader-utils": "^1.1.0",
+    "react": "^15",
+    "react-dom": "^15.4.1",
+    "react-on-rails": "^8.0.3",
+    "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "next",
+    "redux": "^3.6.0",
+    "style-loader": "^0.13.1",
+    "webpack": "2"
   },
   "devDependencies": {
+    "react-hot-loader": "3.0.0-beta.6",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
