--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "postinstall": "cd client && yarn install",
-    "build:test": "cd client && yarn run build:test"
+    "build:test": "cd client && yarn run build:test",
+    "build:development": "cd client && yarn run build:development"
   },
   "cacheDirectories": [
-    "node_modules", "client/node_modules"
+    "node_modules",
+    "client/node_modules"
   ],
   "name": "birdup",
   "private": true,
