forgot a file, added in eslint/flow superpowers

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -6,7 +6,7 @@
   ],
   "env": {
     "development": {
-      "plugins": ["react-hot-loader/babel"]
+      "plugins": ["react-hot-loader/babel", "idx", "lodash"]
     }
   }
 }
