--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
   },
   "scripts": {
     "build:development": "webpack-dev-server --config webpack.config.dev --progress",
-    "build:test": "webpack-dev-server --config webpack.config --progress"
+    "build:test": "webpack-dev-server --config webpack.config --progress",
+    "build:production:client": "NODE_ENV=production webpack --config webpack.config.production.client.js",
+    "build:production:server": "NODE_ENV=production webpack --config webpack.config.production.server.js",
+    "build:production": "rm -rf ../public/webpack/production && NODE_ENV=production yarn run build:production:client && yarn run build:production:server"
   },
   "dependencies": {
-    "idx": "^1.5.0",
-    "lodash": "^4.17.4",
+    "actioncable": "^5.1.2",
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.0",
     "babel-polyfill": "^6.20.0",
@@ -20,24 +23,35 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-runtime": "^6.20.0",
+    "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.26.1",
     "es5-shim": "^4.5.9",
+    "expose-loader": "^0.7.3",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "idx": "^1.5.0",
     "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
     "loader-utils": "^1.1.0",
+    "lodash": "^4.17.4",
+    "postcss-loader": "^1.3.3",
     "react": "^15",
     "react-dom": "^15.4.1",
+    "react-hot-loader": "3.0.0-beta.7",
     "react-on-rails": "^8.0.3",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "next",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
-    "webpack": "2"
+    "turbolinks": "^5.0.3",
+    "ujs": "^0.33.0",
+    "webpack": "2",
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "react-hot-loader": "3.0.0-beta.6",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-manifest-plugin": "^1.1.0",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
@@ -56,6 +70,7 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "flow-bin": "^0.49.1"
+    "flow-bin": "^0.49.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
