--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,76 @@
 {
-  "name": "birdup",
+  "name": "react-on-rails-hot-minimal",
   "private": true,
-  "scripts": {
-    "build:test": "NODE_ENV=test webpack --config webpack.config.js",
-    "build:production": "NODE_ENV=production webpack --config webpack.config.js",
-    "build:development": "NODE_ENV=development webpack -w --config webpack.config.js"
+  "engines": {
+    "node": "6.9.0",
+    "npm": "4.1.1"
   },
-  "cacheDirectories": ["node_modules", "client/node_modules"],
+  "scripts": {
+    "build:development": "webpack-dev-server --config webpack.config.dev --progress",
+    "build:test": "webpack-dev-server --config webpack.config --progress",
+    "build:production:client": "NODE_ENV=production webpack --config webpack.config.production.client.js",
+    "build:production:server": "NODE_ENV=production webpack --config webpack.config.production.server.js",
+    "build:production": "rm -rf ../public/webpack/production && NODE_ENV=production yarn run build:production:client && yarn run build:production:server"
+  },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.3.2",
-    "babel-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "actioncable": "^5.1.2",
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-runtime": "^6.20.0",
+    "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^0.4.0",
+    "css-loader": "^0.26.1",
     "es5-shim": "^4.5.9",
     "expose-loader": "^0.7.3",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "idx": "^1.5.0",
     "imports-loader": "^0.7.1",
-    "js-yaml": "^3.8.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-on-rails": "8.0.3",
-    "webpack": "^2.3.3",
-    "webpack-manifest-plugin": "^1.1.0"
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
+    "loader-utils": "^1.1.0",
+    "lodash": "^4.17.4",
+    "postcss-loader": "^1.3.3",
+    "react": "^15",
+    "react-dom": "^15.4.1",
+    "react-hot-loader": "3.0.0-beta.7",
+    "react-on-rails": "^8.0.3",
+    "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "next",
+    "redux": "^3.6.0",
+    "style-loader": "^0.13.1",
+    "turbolinks": "^5.0.3",
+    "ujs": "^0.33.0",
+    "webpack": "2",
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-idx": "^1.5.1",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react-native": "^2.0.0",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
+    "flow-bin": "^0.49.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
