--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "scripts": {
     "postinstall": "cd client && yarn install",
-    "build:test": "cd client && yarn run build:test"
+    "build:test": "cd client && yarn run build:test",
+    "build:development": "cd client && yarn run build:development"
   },
   "cacheDirectories": [
     "node_modules",
     "client/node_modules"
   ],
   "name": "birdup",
-  "private": true,
-  "dependencies": {},
-  "devDependencies": {
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
-  }
+  "private": true
 }
