--- a/client/package.json
+++ b/client/package.json
@@ -37,12 +37,15 @@
     "lodash": "^4.17.4",
     "postcss-loader": "^1.3.3",
     "react": "^15",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.7",
     "react-on-rails": "^8.0.3",
     "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0",
+    "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
+    "react-router-transition": "^0.1.1",
+    "react-transition-group": "^2.0.2",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "turbolinks": "^5.0.3",
