--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-router-redux": "next",
     "react-router-transition": "^0.1.1",
     "react-transition-group": "^2.0.2",
+    "recordrtc": "^5.4.2",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "turbolinks": "^5.0.3",
