--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.5",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.26.1",
+    "detectrtc": "^1.3.5",
     "es5-shim": "^4.5.9",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.1.2",
