--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,8 @@
     "react-transition-group": "^2.0.2",
     "recordrtc": "^5.4.2",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.2",
+    "redux-saga": "^0.15.4",
     "style-loader": "^0.13.1",
     "turbolinks": "^5.0.3",
     "ujs": "^0.33.0",
