--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "actioncable": "^5.1.2",
     "autoprefixer": "^7.1.1",
+    "axios": "^0.16.2",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.0",
     "babel-polyfill": "^6.20.0",
@@ -50,7 +51,7 @@
     "recordrtc": "^5.4.2",
     "redux": "^3.6.0",
     "redux-persist": "^4.8.2",
-    "redux-saga": "0.15.0",
+    "redux-saga": "^0.15.6",
     "style-loader": "^0.13.1",
     "turbolinks": "^5.0.3",
     "ujs": "^0.33.0",
