--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,7 @@
     "react-on-rails": "^8.0.3",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.1.2",
-    "react-router-redux": "next",
+    "react-router": "^4.1.2",
     "react-router-transition": "^0.1.1",
     "react-transition-group": "^2.0.2",
     "recordrtc": "^5.4.2",
