add new way to access production db (rails c -s -e production_db, rather than heroku run 'rails c -s'), add a few associations to models, create record_markup field in Assessment

--- a/config/database.yml
+++ b/config/database.yml
@@ -86,6 +86,13 @@ production:
   username: birdup
   password: <%= ENV['BIRDUP_DATABASE_PASSWORD'] %>
 
+# instead of `heroku run 'rails c -s'`, we can now run
+# rails c -s production_db locally
+production_db:
+  <<: *default
+  url: <%= ENV['BIRDUP_PRODUCTION_URL'] %>
+
+
 birdup_production:
   <<: *default
   url: <%= ENV['BIRDUP_PRODUCTION_URL'] %>
