styled the report metrics header

--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
     "node_modules",
     "client/node_modules"
   ],
-  "name": "birdup"
+  "name": "birdup",
+  "dependencies": {
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.0"
+  }
 }
