--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "jquery-ujs": "^1.2.2",
+    "json-loader": "^0.5.7",
     "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
     "postcss-loader": "^1.3.3",
