--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "name": "birdup",
   "dependencies": {
+    "classnames": "^2.2.5",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
