--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.4",
     "postcss-loader": "^1.3.3",
     "react": "^15",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.7",
