basic logrocket monitoring is set up to record user sessions

--- a/client/package.json
+++ b/client/package.json
@@ -38,9 +38,11 @@
     "json-loader": "^0.5.7",
     "loader-utils": "^1.1.0",
     "lodash": "^4.17.4",
+    "logrocket": "^0.5.4",
     "postcss-loader": "^1.3.3",
     "react": "^15",
     "react-addons-css-transition-group": "^15.6.0",
+    "react-animate-on-change": "^1.0.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.7",
