--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-router-transition": "^0.1.1",
+    "react-show-more": "^1.1.1",
     "react-transition-group": "^2.0.2",
     "recordrtc": "^5.4.2",
     "redux": "^3.6.0",
