--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "actioncable": "^5.1.2",
+    "audio-loader": "^1.0.3",
+    "audio-play": "^2.2.0",
     "autoprefixer": "^7.1.1",
     "axios": "^0.16.2",
     "babel-core": "^6.23.1",
