--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "es5-shim": "^4.5.9",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.1.2",
+    "html2canvas": "^0.5.0-beta4",
     "idx": "^1.5.0",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
