--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react": "^15",
     "react-addons-css-transition-group": "^15.6.0",
     "react-animate-on-change": "^1.0.0",
+    "react-beautiful-dnd": "^3.0.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.4.1",
     "react-hot-loader": "3.0.0-beta.7",
